# HsNix

./: .gitignore  LICENSE  README.md  default.nix  hsnix.cabal  shell.nix  stack.yaml
nix/: sources.json
src/HsNix/: Store.hs
src/HsNix/Store/: Context.hs
