cabal-version:      2.2
name:               hsnix
version:            0.0.1
license:            Apache-2.0
license-file:       LICENSE
copyright:          2020 Domen Kožar and Edward Amsden
maintainer:         Edward Amsden <edward@blackriversoft.com>
author:             Domen Kožar <domen@enlambda.com>
homepage:           https://github.com/hsnix/hsnix#readme
bug-reports:        https://github.com/hsnix/hsnix/issues
synopsis:
  Bindings to the Nix C++ library

build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md
  cbits/aliases.h
  test/data/*.input
  test/data/*.output

common defaults
  default-extensions:
    NoImplicitPrelude
    DeriveAnyClass
    DeriveGeneric
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -fwarn-tabs
    -fwarn-unused-imports -fwarn-missing-signatures
    -fwarn-name-shadowing -fwarn-incomplete-patterns

  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/hsnix/hsnix

library
  import:            defaults
  exposed-modules:
    HsNix.Store
    HsNix.Store.Context

  cc-options:        -Wall
  pkgconfig-depends: nix-store ==2.0 || >2.0, nix-main ==2.0 || >2.0
  hs-source-dirs:    src
  extra-libraries:
    stdc++
    boost_context

  include-dirs:      cbits
  build-depends:
    , base                  >=4.7     && <5
    , containers
    , bytestring
    , inline-c
    , inline-c-cpp
    , protolude

  ghc-options:       -optc=-std=c++17

  if os(osx)
    ghc-options: -pgmc=clang++

